k8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies
spec:
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
      labels:
        app: movies
    spec:
      containers:
        - name: movies
          image: tiobaca/rotten-potatos:v1
          ports:
            - containerPort: 80
#            - containerPort: 5000
