k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-service
spec:
  selector:
    app: movies
  ports:
  - port: 80
    targetPort: 5000
    #targetPort: 5000
    nodePort: 30000
  type: NodePort
