k8s/web/rotten-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rotten-movies-ingress
  namespace: rotten-potatoes
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: rotten-hml-cmpss.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movies-service
            port:
              number: 30000
